fixed watch course z-index issues

--- a/src/scss/pages/_courseoverview.scss
+++ b/src/scss/pages/_courseoverview.scss
@@ -66,6 +66,7 @@
       top: 55%;
       left: 50%;
       transform: translate(-45%, -50%);
+      box-shadow: 0px 25px 80px 0px #0a09561f;
     }
   }
 
