--- a/src/scss/pages/_signup.scss
+++ b/src/scss/pages/_signup.scss
@@ -1,7 +1,6 @@
 // Header Shadow
 header {
   position: relative;
-  z-index: 1;
 }
 
 .nav-shadow {
